# MindSage-2025-07-23-194418239635932

./: README.md  package-lock.json
backend/: Cargo.toml  backend.did  lib.rs
frontend/: index.html  tailwind.config.js
frontend/src/: index.css  main.jsx
frontend/src/auth/: AuthContext.jsx  LocalDevAuth.jsx  developmentConfig.js
frontend/src/components/: Dashboard.jsx  ErrorBoundary.jsx  LoginButton.jsx
src/declarations/backend/: backend.did  backend.did.d.ts  backend.did.js
