[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
candid = "0.10.13"
ic-cdk = "0.17.1"
ic-llm = "1.1.0"
ic-stable-structures = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
